--- a/hello/src/main/resources/application.properties
+++ b/hello/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+# 서버포트 변경
 server.port = 80
+# thymeleaf cache 사용 안 하게
+spring.thymeleaf.cache=false
+# 정적 리소스 변경시 바로 반영되게
+spring.devtools.livereload.enabled=true
