--- a/smart/src/main/resources/application.properties
+++ b/smart/src/main/resources/application.properties
@@ -6,3 +6,12 @@ spring.thymeleaf.cache=false
 spring.devtools.livereload.enabled=true
 # context path 지정
 server.servlet.context-path=/smart
+
+# 오라클 연결 설정
+spring.datasource.dbcp2.driver-class-name= oracle.jdbc.driver.OracleDriver
+spring.datasource.url= jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.username= hanul
+spring.datasource.password= 0000
+
+# jpa 쿼리로그 출력
+spring.jpa.show-sql=true
