--- a/smart/build.gradle
+++ b/smart/build.gradle
@@ -32,6 +32,12 @@ dependencies {
 	// https://mvnrepository.com/artifact/nz.net.ultraq.thymeleaf/thymeleaf-layout-dialect
 	implementation group: 'nz.net.ultraq.thymeleaf', name: 'thymeleaf-layout-dialect', version: '3.2.0'
 	
+	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.7.11'
+	
+	// https://mvnrepository.com/artifact/com.oracle.database.jdbc/ojdbc8
+	implementation 'com.oracle.database.jdbc:ojdbc8:21.9.0.0'
+	
 }
 
 tasks.named('test') {
